[package]
name = "salva_sampler"
version = "0.1.0"
authors = ["royalmustard <36129876+royalmustard@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra={version="*", features=["serde-serialize"]}
salva3d={version="*", features=["nphysics", "sampling", "parallel"]}
ncollide3d="*"
tobj="*"
serde_json="*"